# healpix

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  pyproject.toml  python-reference.txt  setup.cfg  setup.py
.github/workflows/: cibuildwheel.yml  tests.yml
docs/: chealpix.rst  conf.py  healpix.rst  index.rst  library.rst
python/: __init__.py  chealpix.c  healpix.c  reference.txt
python/healpix/: __init__.py
python/healpix/test/: __init__.py  conftest.py  test_chealpix.py  test_healpix.py
python/test/: test_healpix.py
src/: healpix.c  healpix.h
tools/: memory_overhead.py  nside_precision.py  randang_distribution.py
