[metadata]
name = healpix
version = attr:healpix.__version__
maintainer = Nicolas Tessore
maintainer_email = n.tessore@ucl.ac.uk
description = Python package for HEALPix discretisation of the sphere
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
license_files =
    LICENSE.md
url = https://github.com/ntessore/healpix
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    =python
packages =
    healpix
    healpix.test
python_requires = >=3.6
install_requires =
    numpy
